--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 APP_NAME=Lumen
 APP_ENV=local
-APP_KEY=
+APP_KEY=MkBCog9PdpaI80CmV9PrF25MCVJtLGt0
 APP_DEBUG=true
 APP_URL=http://localhost
 APP_TIMEZONE=UTC
