--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,7 @@
     "require": {
         "php": "^7.3|^8.0",
         "firebase/php-jwt": "^5.5",
+        "illuminate/mail": "^8.74",
         "laravel/lumen-framework": "^8.3.1",
         "tymon/jwt-auth": "^1.0"
     },
