--- a/.env.example
+++ b/.env.example
@@ -3,7 +3,7 @@ APP_ENV=local
 APP_KEY=MkBCog9PdpaI80CmV9PrF25MCVJtLGt0
 APP_DEBUG=true
 APP_URL=http://localhost
-APP_TIMEZONE=UTC
+APP_TIMEZONE=Asia/Jakarta
 
 LOG_CHANNEL=stack
 LOG_SLACK_WEBHOOK_URL=
